--- a/PACMAN/netlify.toml
+++ b/PACMAN/netlify.toml
@@ -1,3 +1,6 @@
+[build]
+  functions = "functions"
+  publish = "dist"
 [functions]
   external_node_modules = ["express"]
   node_bundler = "esbuild"
